<resources>
    <string name="app_name">Pop Movies</string>
    <string name="action_settings">Settings</string>

    <string name="nano">My Nanodegree Apps</string>
    <string name="pop_movies">Pop Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it">Build It Bigger</string>
    <string name="make_app">Make Your App Material</string>
    <string name="go_ubi">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>


    <string name="title_activity_settings">Settings</string>
    <string name="pref_sort_label">Sort by</string>
    <string name="pref_sort_key">sort</string>
    <string name="pref_sort_mostpop">Most Popular</string>
    <string name="title_activity_movie_detail">Movie Detail</string>


    <string name="action_share">Share</string>
    <string name="ok">Ok</string>
    <string name="favorite">fav</string>
    <string name="fav">Favorites</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_favor">Favorites</string>
    <string name="title_activity_trailer_example">TrailerExampleActivity</string>
    <string name="title_activity_movie_main">MovieMainActivity</string>

    <string name="no_reviews">"NO REVIEWS AVAILABLE."</string>
    <string name="no_connection">"No network connection"</string>
    <string name="fav_add">"Movie added to favorites"</string>
    <string name="fav_remove">"Movie removed from favorites"</string>
    <string name="title_activity_main2">Main2Activity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_trailers">NO TRAILERS AVAILABLE.</string>
    <string name="net">This application requires an internet connection.</string>
    <string name="title_activity_main_carousel">MainCarousel</string>
    <string name="no_favorites">No movies added to favorites.</string>
        <string name="title_poster_list">Posters</string>
    <string name="title_poster_detail">Poster Detail</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>


</resources>
