<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gerry.myapp.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="@color/colorDark"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/nano"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAlignment="center"/>




    <Button
        android:id="@+id/btn_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pop_movies"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:background="@color/colorB1"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/btn_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:background="@color/colorB2"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/btn_build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:background="@color/colorB3"
        android:textColor="@color/colorWhite"/>



    <Button
        android:id="@+id/btn_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_app"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:background="@color/colorB4"
        android:textColor="@color/colorWhite"/>


    <Button
        android:id="@+id/btn_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubi"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:background="@color/colorB5"
        android:textColor="@color/colorWhite"/>


    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:onClick="sendMessage"
        style="?android:attr/borderlessButtonStyle"
        android:background="@color/colorB6"
        android:textColor="@color/colorWhite"/>

</LinearLayout>
